Fix nav hightlight on small screens

--- a/css/layout.css
+++ b/css/layout.css
@@ -24,7 +24,7 @@ body {
 	box-sizing: border-box;
 	max-width: 1380px;
 	min-height: 100%;
-	margin: 0 40px;
+	padding: 0 40px;
 	padding-bottom: 150px;
 	margin-bottom: -150px;
 }
@@ -108,7 +108,6 @@ div.columns {
 
 	width:				925px;
 	clear:				both;
-	overflow: 			hidden;
 }
 
 div.columns div.left,
